# github-clone-all-repos

./: .gitignore  README.md  clone-all.py  pyproject.toml
src/: github_clone_all_repos.py
