[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "github-clone-all-repos"
version = "20231118"
authors = [{ name = "Magnus167" }]
description = "A tool to clone all public repositories of a specified GitHub user."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.6"
dependencies = ["requests>=2.25.1", "tqdm>=4.59.0"]

[project.urls]
Home = "https://github.com/magnus167/github-clone-all-repos"
Documentation = "https://github.com/Magnus167/github-clone-all-repos/blob/main/README.md"

[project.scripts]
github-clone-all-repos = "github-clone-all-repos.__main__:main"
